--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wc3-utils",
-  "version": "1.0.16",
+  "version": "1.0.0",
   "description": "Utils to Warcraft III",
   "author": "nazarpunk <nazarpunk@gmail.com>",
   "license": "MIT",
@@ -9,11 +9,11 @@
   "scripts": {
     "start": "electron .",
     "watch": "esbuild render/renderer.js --watch --platform=node --target=esnext --format=cjs --bundle --supported:dynamic-import=false --outfile=build/renderer.js",
-    "patch": "npm version patch -m \"Upgrade to %s\"",
     "start-watch": "concurrently --kill-others \"yarn run start\" \"yarn run watch\"",
     "postinstall": "electron-builder install-app-deps",
     "publish": "electron-builder --publish always",
-    "dist": "electron-builder --publish never"
+    "dist": "electron-builder --publish never",
+    "patch": "npm version patch -m \"Upgrade to %s\""
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
