--- a/package.json
+++ b/package.json
@@ -8,20 +8,15 @@
   "homepage": "./",
   "scripts": {
     "start": "electron .",
-    "watch": "esbuild render/renderer.js --watch --platform=node --target=esnext --format=cjs --bundle --supported:dynamic-import=false --outfile=build/renderer.js",
-    "start-watch": "concurrently --kill-others \"yarn run start\" \"yarn run watch\"",
     "postinstall": "electron-builder install-app-deps",
     "publish": "electron-builder --publish always",
     "dist": "electron-builder --publish never",
     "patch": "npm version patch -m \"Upgrade to %s\""
   },
   "devDependencies": {
-    "concurrently": "^8.2.2",
     "electron": "^27.1.2",
     "electron-builder": "^24.6.4",
-    "electron-reloader": "^1.2.3",
-    "esbuild": "^0.19.7",
-    "warodel": "^1.0.9"
+    "electron-reloader": "^1.2.3"
   },
   "web-types": "./web-types.json",
   "build": {
