--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wc3-utils",
+  "name": "electro-war",
   "version": "1.0.12",
   "description": "Utils to Warcraft III",
   "author": "nazarpunk <nazarpunk@gmail.com>",
