--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "devDependencies": {
     "electron": "^27.1.2",
-    "electron-builder": "^24.9.1",
+    "electron-builder": "24.6.4",
     "electron-reloader": "^1.2.3"
   },
   "web-types": "./web-types.json",
