--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,12 +13,10 @@ jobs:
     runs-on: ${{ matrix.os }}
     permissions: write-all
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
-          node-version: 20
-      - uses: actions/setup-node@master
-        with:
-          node-version: 20
+          node-version: current
       - name: install dependencies
         run: yarn install
       - name: publish
